# customize_chat_server

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: main.py
app/api/endpoints/: tests_endpoint.py
app/chat_gpt/chat_gpt_answer/: nomal_chat_gpt_answer.py
app/chat_gpt/chat_gpt_end/: nomal_chat_gpt_v1.py
app/core/: config.py  logging.py
app/gemini/gemini_answer/: nomal_chat_gemini_answer.py
app/gemini/gemini_end/: nomal_chat_gemini_v1.py
app/models/: category.py
app/schemas/: chat.py  streaming_response.py
app/services/: openai.py
app/settings/: env.py  route.py  vertexai_config.py
